@startuml Matchday Match Core Domain
title Matchday V5 - Núcleo del partido

hide empty members
skinparam classAttributeIconSize 0
skinparam linetype ortho

class Match {
  +UUID id
  +UUID home_team_id
  +UUID away_team_id
  +string home_team_name
  +string away_team_name
  +string home_head_coach_name
  +string away_head_coach_name
  +MatchStatus status
  +MatchPeriod current_period
  +MatchFormation home_formation
  +MatchFormation away_formation
  +datetime scheduled_at
  +datetime started_at
  +datetime finished_at
  +datetime period_started_at
  +datetime period_ended_at
  +int announced_added_minutes
  +int clock_version
  --
  +schedule(...): Match
  +start(...): void
  +start_period(...): void
  +set_period_added_time(...): void
  +end_period(...): void
  +clock_snapshot(...): MatchClockSnapshot
  +finish(...): void
}

class MatchSquadPlayer {
  +UUID match_id
  +UUID player_id
  +TeamSide team_side
  +int shirt_number
  +MatchSquadRole role
  +bool is_on_field
  +bool is_sent_off
  +SentOffReason sent_off_reason
  +bool is_captain
}

class MatchSubstitution {
  +UUID match_id
  +UUID player_out_id
  +UUID player_in_id
  +TeamSide team_side
  +SubstitutionReason reason
  +MatchPeriod period
  +int minute
  +int added_minute
}

enum MatchStatus
enum MatchPeriod
enum MatchFormation
enum TeamSide
enum MatchSquadRole
enum SentOffReason
enum SubstitutionReason

Match "1" *-- "22..*" MatchSquadPlayer : convocatoria
Match "1" *-- "0..*" MatchSubstitution
Match --> MatchStatus
Match --> MatchPeriod
Match --> MatchFormation
MatchSquadPlayer --> TeamSide
MatchSquadPlayer --> MatchSquadRole
MatchSquadPlayer --> SentOffReason
MatchSubstitution --> SubstitutionReason

note right of Match
  Conserva snapshots de nombres de equipos
  y directores técnicos.
  El reloj deriva del inicio del periodo;
  no persiste un contador por segundo.
end note

note bottom of MatchSquadPlayer
  Exactamente 11 titulares por equipo.
  Dorsales únicos y, como máximo,
  un capitán que debe ser titular.
end note
@enduml
